# 2024-1B-T02-EC10-G03

./: 2024-1B-T02-EC10-G03.code-workspace  README.md
.github/: renovate.json
.github/workflows/: k6.yml  load_test.yml  pages.yml  terraform.yml
docs/: Dockerfile.base  README.md  astro.config.ts  docker-compose.yml  package.json
docs/src/content/docs/: index.mdx
docs/src/content/i18n/: pt-BR.json
docs/src/styles/: custom.css
src/ai_processor/: .dockerignore  .gitignore  Dockerfile.base  main.py  requirements.txt
src/ai_processor/messaging/: __init__.py  common.py  consumer.py
src/ai_processor/services/: __init__.py  ai_processor.py  file_handler.py
src/ai_processor/src/: main.py
src/ai_processor/src/messages/: common.py  consumer.py
src/ai_processor/src/messaging/: common.py  consumer.py
src/ai_processor/src/services/: __init__.py  bucket_service.py  camera_service.py  record_service.py
src/backend/: .dockerignore  .env.example  .env.template  .gitignore  Cargo.toml  Dockerfile.dev  Dockerfile.kubernetes  Dockerfile.prod  docker-compose-actions.yml  docker-compose-db.yml  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  docker-compose.yml
src/backend/assets/: Insomnia_collection.json
src/backend/prisma/: schema.prisma
src/backend/prisma-cli/: Cargo.toml
src/backend/src/: auth.rs  error.rs  main.rs
src/backend/src/features/: session.rs
src/backend/src/middlewares/: auth.rs  session.rs
src/backend/src/repositories/: employee.rs  inventory.rs  medicine.rs  mod.rs  patient.rs  patient_report.rs  pyxis.rs  pyxis_report.rs  transaction.rs
src/backend/src/routes/: catalog.rs  inventory.rs  medicine.rs  mod.rs  patient_report.rs  pyxis.rs  pyxis_report.rs  status.rs  swagger.rs  transaction.rs  user.rs
src/backend/src/states/: app.rs
src/backend/src/utils/: datetime.rs  mod.rs  parser.rs  session.rs
src/dashboard/: .env.template  .gitignore  app.json  docker-compose-dev.yml  docker-compose-prod.yml  eas.json  entrypoint.sh  package.json  tsconfig.json
src/dashboard/src/: App.tsx
src/frontend/: .env  .env.example  .gitignore  Dockerfile.base  README.md  app.json  babel.config.js  docker-compose-dev.yml  package-lock.json  package.json  tsconfig.json
src/frontend/src/: App.tsx
src/frontend/src/api/: client.ts
src/frontend/src/pages/: Help.tsx  History.tsx  (+8 more)
src/kubernetes/: app-config.yaml  app-deployment.yaml  app-pvc.yaml  app-service.yaml  postgres-deployment.yaml  redis-deployment.yaml  redis-service.yaml  setup.sh
src/load_test/: .gitignore  api_load_test.ts  docker-compose.yml  grafana-dashboard.yaml  package.json  webpack.config.js
src/load_test/dashboards/: k6-load-testing-results.json
src/load_test/src/: index.js  inventory.test.js  medicines.test.js  pyxis.test.js  users.test.js
src/metabase/: docker-compose.yaml  docker-compose.yml
src/pyxis/: .env.example  docker-compose-dev.yml  docker-compose-prod.yml  requirements.txt
src/pyxis/src/: main.py
src/terraform/: main.tf  variables.tf
(+86 files in other folders)
