[package]
name = "backend"
version = "0.1.0"
edition = "2021"
authors = ["ViniciosLugli <vinicioslugli@gmail.com>"]

[dependencies]
ntex = { version = "1.2.1", features = ["tokio"] }
ntex-cors = "1.0.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
log = "0.4.21"
pretty_env_logger = "0.5.0"
dotenvy = "0.15.7"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
	"postgresql",
	"migrations",
	"mocking",
] }
tokio = { version = "1.37.0", features = ["full"] }
utoipa = "4.2.3"
utoipa-swagger-ui = "7.0.1"
redis = { version = "0.25.3", features = ["tokio-comp"] }
cookie = { version = "0.18.1", features = ["private", "secure", "signed"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
time = { version = "0.3.36", default-features = false, features = ["std"] }
thiserror = "1.0.60"
chrono = { version = "0.4.38", features = ["serde"] }

[workspace]
resolver = "2"
members = ["prisma-cli"]
